--- a/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
+++ b/modules/KalturaSupport/tests/AdFlashvarVastDoubleClickCompanion.qunit.html
@@ -49,8 +49,9 @@ function jsKalturaPlayerTest( videoId ){
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> VAST flashvar DoubleClick Ad and Companion </h2>
-<a href="http://ad-2g.doubleclick.net/pfadx/AngelaSite;kw=ipadad;sz=100x100;ord=45028616;dcmt=text/xml">DoubleClick VAST</a> <br/>
+<h2> VAST DoubleClick Ad and Companion </h2>
+<div id="vastConfig"></div>
+
 <div id="playbackModeSelector"></div>
 <br />
 <div id="testLongCompanion" style="width:728px;height:90px;;border:solid thin black;padding:5px;margin:5px;"> ( long companion target )</div>
@@ -64,20 +65,39 @@ function jsKalturaPlayerTest( videoId ){
 		<span property="media:height" content="300"></span>
 	</div>
 <script>
-	kWidget.embed({
-		'targetId': 'myVideoTarget',
-		'wid': '_243342',
-		'uiconf_id' : '2877502',
-		'entry_id' : '0_uka1msg4',
-		'flashvars':{
-			'vast.plugin': true,
-			'vast.numPreroll' : 1,
-			'vast.prerollInterval' : 1,
-			'vast.prerollstartwith' : 1,
-			'vast.htmlCompanions' : "testCompanion:300:250;testLongCompanion:728:90;",
-			'vast.prerollUrl' : 'http://ad-2g.doubleclick.net/pfadx/AngelaSite;kw=ipadad;sz=100x100;ord=45028616;dcmt=text/xml'
+	var flashvars = {
+		'vast': {
+			'plugin' : true,
+			'numPreroll' : 1,
+			'htmlCompanions' : "testCompanion:300:250;testLongCompanion:728:90;",
+			'prerollUrl' : 'http://ad-2g.doubleclick.net/pfadx/AngelaSite;kw=ipadad;sz=100x100;ord=45028616;dcmt=text/xml',
+			'timeout' : 4,
+			'preSequence' : 1
 		}
-	});
+	};
+	
+	function doEmbedPlayer( fv ){
+		// clear the companions 
+		$('#testLongCompanion').text('( long companion target )');
+		$('#testCompanion').text( '( companion target )' );
+		kWidget.embed({
+			'targetId': 'myVideoTarget',
+			'wid': '_243342',
+			'uiconf_id' : '2877502',
+			'entry_id' : '0_uka1msg4',
+			'flashvars': fv
+		})
+	}
+	/* embed with flashvars: */
+	doEmbedPlayer(flashvars);
+		
+	$( '#vastConfig' ).prettyKalturaConfig(
+			'vast', 
+			flashvars, 
+			function(fv){
+				doEmbedPlayer( fv );
+			}
+	);
 </script>
 <!-- 
 
